RESOLVED FIXED78774
Fix the broken viewport tests
https://bugs.webkit.org/show_bug.cgi?id=78774
Summary Fix the broken viewport tests
Mark Hahnenberg
Reported 2012-02-15 19:34:58 PST
The patch for bug 68044 broke a few tests in fast/viewport. We should fix these for the platforms that support them.
Attachments
Patch (8.40 KB, patch)
2012-02-15 19:44 PST, Mark Hahnenberg
no flags
Patch (9.01 KB, patch)
2012-02-15 21:17 PST, Mark Hahnenberg
kenneth: review+
Mark Hahnenberg
Comment 1 2012-02-15 19:44:25 PST
Mark Hahnenberg
Comment 2 2012-02-15 21:17:41 PST
Kenneth Rohde Christiansen
Comment 3 2012-02-16 02:07:53 PST
Comment on attachment 127308 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127308&action=review > Source/JavaScriptCore/wtf/text/WTFString.h:90 > +WTF_EXPORT_PRIVATE float charactersToFloatWithJunk(const LChar*, size_t, bool* ok = 0, bool* didReadNumber = 0); Maybe charactersToFloatIgnoringJunk would be more descriptive? > Source/JavaScriptCore/wtf/text/WTFString.h:92 > WTF_EXPORT_PRIVATE float charactersToFloat(const UChar*, size_t, bool* ok = 0, bool* didReadNumber = 0); > +WTF_EXPORT_PRIVATE float charactersToFloatWithJunk(const UChar*, size_t, bool* ok = 0, bool* didReadNumber = 0); Btw, does the didReadNumber make sense for the non-junk versions?
Mark Hahnenberg
Comment 4 2012-02-16 10:21:10 PST
> Btw, does the didReadNumber make sense for the non-junk versions? I think it still does in case somebody wants to do some additional parsing based on whether or not the prefix of the string is a number of some sort.
Mark Hahnenberg
Comment 5 2012-02-16 16:54:50 PST
Note You need to log in before you can comment on or make changes to this bug.