Fix the broken viewport tests https://bugs.webkit.org/show_bug.cgi?id=78774

Reviewed by Kenneth Rohde Christiansen.

Source/JavaScriptCore:

* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
* wtf/text/WTFString.cpp:
(WTF):
(WTF::toDoubleType): Template-ized to allow other functions to specify whether they
want to allow trailing junk or not when calling strtod.
(WTF::charactersToDouble):
(WTF::charactersToFloat):
(WTF::charactersToFloatIgnoringJunk): Created new version of charactersToFloat that allows
trailing junk.
* wtf/text/WTFString.h:
(WTF):

Source/WebCore:

No new tests.

* dom/ViewportArguments.cpp:
(WebCore::numericPrefix): Changed to use the new charactersToFloatWithJunk function(s).

LayoutTests:

* platform/gtk/Skipped: Undoing tests skipped due to earlier breakage.
* platform/qt/Skipped: Ditto.


Canonical link: https://commits.webkit.org/95835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108001 268f45cc-cd09-0410-ab3c-d52691b4dbfc